# trofida

./: .env  Cargo.toml  README.md  output.txt
contracts/: Anchor.toml  Cargo.toml  package-lock.json  package.json
contracts/programs/contracts/: Cargo.toml
contracts/programs/contracts/src/: lib.rs
contracts/programs/todo-stake/: Cargo.toml
contracts/programs/todo-stake/src/: lib.rs
src/: app.rs  errors.rs  lib.rs  main.rs  schema.rs
src/db/: mod  mod.rs
src/domains/: mod.rs
src/domains/auth/: graphql.rs  models.rs
src/domains/staking/: graphql.rs  models.rs
src/domains/todo/: graphql.rs  mod.rs  models.rs  service.rs
src/domains/todo/models/: folder.rs
src/graphql/: mod.rs  mutation.rs  query.rs
src/handlers/: todos.rs
src/models/: schema.sql  todo.rs
src/routes/: auth.rs  todos.rs
src/utils/: authuser.rs  jwt.rs  mod.rs  password.rs
