[package]
name = "axum-api"
version = "0.1.0"
edition = "2024"
default-run = "axum-api"

[dependencies]
axum = "0.8"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "chrono",
  "runtime-tokio-native-tls",
  "runtime-tokio-rustls",
] }

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

jsonwebtoken = "9"
thiserror = "1.0"
dotenvy = "0.15"
async-graphql = { version = "7", features = ["uuid", "chrono"] }
async-graphql-axum = "7"
tower-http = { version = "0.5", features = ["cors"] }